--- a/produtos.html
+++ b/produtos.html
@@ -70,12 +70,10 @@
                                             <option value="descricaoConsulta" id="descricaoConsulta" data-tipo="texto">
                                                 Descrição
                                             </option>
-                                            <option value="dataCadastroConsulta" id="dataCadastroConsulta"
-                                                data-tipo="data">
+                                            <option value="precoConsulta" id="precoConsulta" data-tipo="numerico">
                                                 Preço
                                             </option>
-                                            <option value="dataCadastroConsulta" id="dataCadastroConsulta"
-                                                data-tipo="data">
+                                            <option value="estoqueConsulta" id="estoqueConsulta" data-tipo="numerico">
                                                 Estoque
                                             </option>
                                         </select>
