--- a/produtos.html
+++ b/produtos.html
@@ -17,6 +17,11 @@
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon.png">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="theme-color" content="#ffffff">
+
+    <!-- NOVO BOOTSTRAP -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
 </head>
 
 <script src="js/login.js" defer async></script>
@@ -86,16 +91,16 @@
                                     <input type="text" id="campoValor1" value="1">
                                     <input type="text" id="campoValor2" style="display: none;">
 
-                                    <button class="btn btn-consulta"
-                                        onclick="executaConsulta()">Consultar</button>
-                                </div>
+                                    <button class="btn btn-dark" onclick="executaConsulta()">Consultar</button>
+                                </div>    
 
                                 <div class="acoes-consulta">
-                                    <button class="btn btn-consulta" onclick="incluirProduto()">Incluir</button>
+                                    <button class="btn btn-primary" onclick="incluirProduto()">Incluir</button>
                                 </div>
 
-                                <table border="1">
-                                    <thead>
+                                <table class="table table-striped table-hover table-bordered caption-top">
+                                    <caption class="table-info text-center bg-primary" style="color:aliceblue;font-size: 22px;">Produtos</caption>
+                                    <thead class="table-primary">
                                         <th>Código</th>
                                         <th>Descrição</th>
                                         <th>Preço</th>
@@ -161,6 +166,10 @@
             </div>
         </section>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+
     <script>
         let sidebar = document.querySelector(".sidebar");
         let sidebarBtn = document.querySelector(".sidebarBtn");
