--- a/produtos.html
+++ b/produtos.html
@@ -26,7 +26,7 @@
 
 <script src="js/login.js" defer async></script>
 
-<body onload="validaSessao('produtos.html'), listarProdutosConsulta()">
+<body onload="validaSessao('produtos.html'), executaConsulta()">
     <div class="box-load">
         <div class="pre"></div>
         <div class="mensagem-loading">Carregando página, aguarde....</div>
@@ -65,25 +65,26 @@
                             <div class=consulta>
                                 <div class="filtro-consulta">
                                     <label for="filtroConsulta">Filtro:</label>
-
                                     <div class="acoes-filtro">
                                         <select name="filtroConsulta" id="filtroConsulta"
                                             onChange="atualizaTipoConsulta()">
-                                            <option value="codigoConsulta" id="codigoConsulta" data-tipo="numerico" selected>
+                                            <option value="codigoConsulta" id="codigoConsulta" data-tipo="numerico"
+                                                selected>
                                                 Código
                                             </option>
                                             <option value="descricaoConsulta" id="descricaoConsulta" data-tipo="texto">
                                                 Descrição
                                             </option>
-                                            <option value="precoConsulta" id="precoConsulta" data-tipo="numerico">
+                                            <option value="dataCadastroConsulta" id="dataCadastroConsulta"
+                                                data-tipo="data">
                                                 Preço
                                             </option>
-                                            <option value="estoqueConsulta" id="estoqueConsulta" data-tipo="numerico">
+                                            <option value="dataCadastroConsulta" id="dataCadastroConsulta"
+                                                data-tipo="data">
                                                 Estoque
                                             </option>
                                         </select>
                                     </div>
-
                                     <select name="operadorConsulta" id="operadorConsulta"
                                         onchange="atualizaCampoSegundoValor()">
                                     </select>
@@ -91,16 +92,16 @@
                                     <input type="text" id="campoValor1" value="1">
                                     <input type="text" id="campoValor2" style="display: none;">
 
-                                    <button class="btn btn-dark" onclick="executaConsulta()">Consultar</button>
-                                </div>    
+                                    <button class="btn btn-primary" onclick="executaConsulta()">Consultar</button>
+                                </div>
 
                                 <div class="acoes-consulta">
-                                    <button class="btn btn-primary" onclick="incluirProduto()">Incluir</button>
+                                    <button class="btn btn-success" onclick="incluirProduto()">Incluir</button>
                                 </div>
 
                                 <table class="table table-striped table-hover table-bordered caption-top">
                                     <caption class="table-info text-center bg-primary" style="color:aliceblue;font-size: 22px;">Produtos</caption>
-                                    <thead class="table-primary">
+                                    <thead class="table-primary">                                    
                                         <th>Código</th>
                                         <th>Descrição</th>
                                         <th>Preço</th>
@@ -153,8 +154,8 @@
                                         <hr>
 
                                         <div class="modal-footer">
-                                            <button class="btn" onclick="confirmarModal()">Confirmar</button>
-                                            <button class="btn" onclick="fecharModal()">Fechar</button>
+                                            <button class="btn btn-success" onclick="confirmarModal()">Confirmar</button>
+                                            <button class="btn btn-danger" onclick="fecharModal()">Fechar</button>
                                         </div>
                                     </div>
                                 </dialog>
@@ -166,10 +167,6 @@
             </div>
         </section>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
-
     <script>
         let sidebar = document.querySelector(".sidebar");
         let sidebarBtn = document.querySelector(".sidebarBtn");
@@ -183,9 +180,14 @@
         }
     </script>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+
     <script src="js/api.js"></script>
     <script src="js/produto.js"></script>
     <script src="js/consulta.js"></script>
+    <script src="js/global.js"></script>
 
 </body>
 
