--- a/clientes.html
+++ b/clientes.html
@@ -6,6 +6,8 @@
     <title>B2 System</title>
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/loading.css">
+    <link rel="stylesheet" href="css/modal.css">
+    <link rel="stylesheet" href="css/consulta.css">
 
     <!-- Boxicons CDN Link -->
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
@@ -15,11 +17,16 @@
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon.png">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="theme-color" content="#ffffff">
+
+    <!-- NOVO BOOTSTRAP -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
 </head>
 
 <script src="js/login.js" defer async></script>
 
-<body onload="validaSessao('clientes.html')">
+<body onload="validaSessao('produtos.html'), executaConsulta()">
     <div class="box-load">
         <div class="pre"></div>
         <div class="mensagem-loading">Carregando página, aguarde....</div>
@@ -54,7 +61,107 @@
                     style="display: flex; justify-content: center;align-items: center;width: 100%;">
                     <div class="box" style="width: 100%;background-color: aqua;">
                         <div class="right-side">
-                            <div class="box-topic">Em desenvolvimento....</div>
+                            <div class="box-topic">Clientes</div>
+                            <div class=consulta>
+                                <div class="filtro-consulta">
+                                    <label for="filtroConsulta">Filtro:</label>
+                                    <div class="acoes-filtro">
+                                        <select name="filtroConsulta" id="filtroConsulta"
+                                            onChange="atualizaTipoConsulta()">
+                                            <option value="codigoConsulta" id="codigoConsulta" data-tipo="numerico"
+                                                selected>
+                                                Código
+                                            </option>
+                                            <option value="descricaoConsulta" id="descricaoConsulta" data-tipo="texto">
+                                                Descrição
+                                            </option>
+                                            <option value="dataCadastroConsulta" id="dataCadastroConsulta"
+                                                data-tipo="data">
+                                                Preço
+                                            </option>
+                                            <option value="dataCadastroConsulta" id="dataCadastroConsulta"
+                                                data-tipo="data">
+                                                Estoque
+                                            </option>
+                                        </select>
+                                    </div>
+                                    <select name="operadorConsulta" id="operadorConsulta"
+                                        onchange="atualizaCampoSegundoValor()">
+                                    </select>
+
+                                    <input type="text" id="campoValor1" value="1">
+                                    <input type="text" id="campoValor2" style="display: none;">
+
+                                    <button class="btn btn-primary" onclick="executaConsulta()">Consultar</button>
+                                </div>
+
+                                <div class="acoes-consulta">
+                                    <button class="btn btn-success" onclick="incluirProduto()">Incluir</button>
+                                </div>
+
+                                <table class="table table-striped table-hover table-bordered caption-top">
+                                    <caption class="table-info text-center bg-primary" style="color:aliceblue;font-size: 22px;">Clientes</caption>
+                                    <thead class="table-primary">
+                                        <th>Código</th>
+                                        <th>Nome</th>
+                                        <th>CPF</th>
+                                        <th>Cidade</th>
+                                        <th>Estado</th>
+                                        <th colspan="5" class="text-center">Ações</th>
+                                    </thead>
+                                    <tbody id="tabela-produtos">
+                                        <!-- SERA PREENCHIDO VIA JAVASCRIPT -->
+                                    </tbody>
+                                </table>
+
+                                <!-- MODAL INICIO -->
+                                <dialog class="modal">
+                                    <!-- Modal content -->
+                                    <div class="modal-content">
+                                        <section class="modal-header">
+                                            <h1 class="modal-title">Clientes</h1>
+                                            <button onclick="fecharModal()" class="btn-close">
+                                                <!-- <span class="close">&times;</span> -->
+                                                <span class="close">&times;</span>
+                                            </button>
+                                        </section>
+
+                                        <hr>
+
+                                        <!-- <form action=""> -->
+                                        <div class="form">
+                                            <input type="hidden" id="ACAO" value="ACAO_INCLUSAO">
+                                            <div class="campo">
+                                                <label for="codigo">Código:</label>
+                                                <input type="text" id="codigo" disabled size="10">
+                                            </div>
+
+                                            <div class="campo">
+                                                <label for="descricao">Descrição:</label>
+                                                <input type="text" id="descricao" value="Notebook">
+                                            </div>
+
+                                            <div class="campo">
+                                                <label for="preco">Preço:</label>
+                                                <input type="text" id="preco" value="15000,00">
+                                            </div>
+
+                                            <div class="campo">
+                                                <label for="estoque">Estoque:</label>
+                                                <input type="text" id="estoque" value="150">
+                                            </div>
+                                        </div>
+
+                                        <hr>
+
+                                        <div class="modal-footer">
+                                            <button class="btn btn-success" onclick="confirmarModal()">Confirmar</button>
+                                            <button class="btn btn-danger" onclick="fecharModal()">Fechar</button>
+                                        </div>
+                                    </div>
+                                </dialog>
+                                <!-- MODAL FIM -->
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -73,6 +180,17 @@
             }
         }
     </script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+
+    <script src="js/api.js"></script>
+    
+    <script src="js/cliente.js"></script>
+
+    <script src="js/consulta.js"></script>
+    <script src="js/global.js"></script>
 
 </body>
 
